updated endpoints
